<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IT Fitness</string>
    <string name="nullu"> </string>
    <string name="hello">»  Starten</string>
    <string name="news">Neuigkeiten</string>
    <string name="resume">»  Spiel fortsetzen</string>
    <string name="goon">Weiter</string>
    <string name="menu_settings">Settings</string>
    <string name="start_title">Ihre persönliche IT Fitness</string>
    <string name="heureka">Testen Sie Ihr Wissen in einer oder mehreren Disziplinen. Und vergleichen Sie sich.\r\n\r\nInhaltlich wurden die Tests von Fachwissenschaftlern deutscher Hochschulen entwickelt. </string>
    <string name="resultTitle">Ihr Ergebnis:</string>
    <string name="app_id">142836465898679</string>
    <string name="share">Teilen</string>
    <string name="subject">IT Fitness - Ergebnis</string>
    <string name="topicTitle">Themen</string>
    <string name="levels">Schwierigkeitsgrad</string>
    <string name="home">Neues Spiel</string>
    <string name="statistics">»  Statistik</string>
    <string name="statisticsTitle">Durchschnitt</string>
 	<string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="update">&lt;font color="#000"&gt;Es ist ein neues Thema verfügbar&lt;/font&gt;&lt;br&gt;&lt;b&gt;&lt;font color="#e2001a" style="font-size:2.5em"&gt;» Jetzt herunter laden?&lt;/font&gt;&lt;/b&gt;</string>
    <string name="legendLeft">Ihr Ergebnis</string>
    <string name="legendRight">Ø aller Teilnehmer</string>
    <string name="levelsTitle">Schwierigkeitsgrad</string>
    <string name="about">»  Infos</string>
    <string name="back">Zurück</string>
    <string name="menu">Menü</string>
    <string name="aboutTitle">Infos</string>
    <string name="aboutText"><![CDATA[<p>Hinter den gesamten IT-Fitness-Fragen der App verbergen sich die Inhalte aus fachlichen Championships der Computerwoche zu verschiedenen Themen.</p>
                <p> Wissenschaftlich durch Hochschulen begleitet, wurde in den Kompetenzwettbewerben mit jeweils mehreren Hundert Teilnehmern die fachliche Elite ermittelt.</p>
                <p> Konzeption und Entwicklung der Championships und IT-Fitness-App erfolgte durch <font color="#e67f1e">denkfabrik groupcom</font> als Kooperationspartner der Computerwoche.</p>
                ]]></string>
</resources>