<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#ffffff" >
   

    <TextView
	    android:layout_width="fill_parent"
    android:layout_height="wrap_content"    
    android:text="@string/start_title"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:background="#fe892a"
    android:textColor="#fff"
    android:textSize="22sp"
    >
	    
	</TextView>
	<TextView
	    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/introText"
    android:text="@string/heureka"
    android:padding="10dp"
    
    android:background="#fe892a"
    android:textColor="#fff"
    android:textSize="18sp"
    android:layout_marginBottom="10dp">
	    
	</TextView>
	 <ScrollView
        android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical"    
    android:background="#ffffff">
    <LinearLayout    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical"    
    android:background="#ffffff" >
    <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >
    <Button
        android:id="@+id/Button01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"               
        android:minHeight="50dp"
        android:onClick="gamesOverview"
        android:text="@string/hello"
        android:textSize="22sp" />
    <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bubble_counter"
                    android:id="@+id/updateCounterWrapper"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:padding="4dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/updateCounter" 
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"
                        android:textSize="4pt"
                        />
                </LinearLayout>
    </FrameLayout>
    <Button
        android:id="@+id/Button02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"               
        android:minHeight="50dp"
        android:onClick="ResumeGame"
        android:text="@string/resume"
        android:textSize="22sp" />
    <Button
        android:id="@+id/Button03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"               
        android:minHeight="50dp"
        android:onClick="ShowStatistics"
        android:text="@string/statistics"
        android:textSize="22sp" />
     <TextView
	    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lblMessage"
    
    android:padding="10dp"
    android:layout_marginTop="10dp"    
    android:textColor="#fe892a"
    android:textSize="18sp"
    android:layout_marginBottom="10dp">
	    
	</TextView>
      
        
  
    </LinearLayout>
   </ScrollView>

</LinearLayout>